# Custard

./: .gitignore  CLASS_DIAGRAM.md  LICENSE  README.md  build.gradle.kts  chinese_strings_detailed.txt  gradle.properties  local.properties.example  package.json  packages_whitelist.txt  settings.gradle.kts  sync_example_packages.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/streamnative/: StreamOperators.cpp  native_markdown_parser.cpp  native_markdown_splitter.cpp  native_xml_splitter.cpp
app/src/main/cpp/streamnative/plugins/: StreamPlanExecutionPlugin.cpp  StreamPlanExecutionPlugin.h  StreamXmlPlugin.cpp  StreamXmlPlugin.h
app/src/main/res/drawable/: ic_voice_assistant_widget_preview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  interaction_service.xml
docs/: BUILDING.md  CONTRIBUTING.md  DEFAULT_TOOLS_ARCH.md  SCRIPT_DEV_GUIDE.md  TOOLPKG_FORMAT_GUIDE.md  character_group_card_plan.md  chat_import_markdown.md  external_intent_chat.md  workflow_intent_trigger.md  workspace_pluginization_plan.md
docs/package_dev/: ffmpeg.md  files.md  index.md  memory.md  network.md
examples/: 12306.ts  ai_chat.js  ai_chat.ts  all_about_myself.js  all_about_myself.ts  automatic_baidu_map_assistant.js  automatic_baidu_map_assistant.ts  automatic_bilibili_assistant.js  automatic_bilibili_assistant.ts  automatic_ui_base.ts  automatic_ui_subagent.js  automatic_ui_subagent.ts  automatic_xiaohongshu_assistant.js  automatic_xiaohongshu_assistant.ts  baidu_map.js  baidu_map.ts  beeimg_image_uploader.js  beeimg_image_uploader.ts  bilibili_tools.js  bilibili_tools.ts  code_runner.js  code_runner.ts  crossref.js  crossref.ts  custard-tester.js  custard-tester.ts  daily_life.ts  douyin_download.js  douyin_download.ts  duckduckgo.ts  extended_chat.ts  extended_file_tools.ts  extended_http_tools.ts  extended_memory_tools.js  extended_memory_tools.ts  ffmpeg.ts  file_converter.ts  google_search.ts  jmcomic.js  jmcomic.ts  (+28 more)
examples/github/: package.json
examples/github/src/: index.js  index.ts
examples/github/src/github/: api.js  api.ts
examples/github/src/local/: fileApply.js
examples/types/: chat.d.ts  compose-dsl.d.ts  files.d.ts  index.d.ts  memory.d.ts  network.d.ts  results.d.ts  system.d.ts  tool-types.d.ts  workflow.d.ts
examples/windows_control/: manifest.json
examples/windows_control/i18n/: en-US.js  en-US.ts  zh-CN.js  zh-CN.ts
examples/windows_control/resources/pc_agent/: README.md
examples/windows_control/ui/windows_setup/: index.ui.js  index.ui.ts
gradle/: libs.versions.toml
llama/: CMakeLists.txt  build.gradle.kts
llama/src/main/cpp/: llama_jni_stub.cpp
llama/src/main/java/com/ai/assistance/llama/: LlamaNative.kt  LlamaSession.kt
llama/src/main/java/com/kymjs/ai/llama/: LlamaLibraryLoader.kt  LlamaNative.kt  LlamaSession.kt
mcp-servers/adb-ui/: README.md  mcp-config-example.json  package.json
mcp-servers/adb-ui/src/: adb.ts  index.ts
mmd/: CMakeLists.txt  build.gradle.kts
mmd/src/main/cpp/: mmd_jni.cpp  mmd_physics_stub.cpp
mmd/src/main/java/com/ai/assistance/mmd/: MmdGlSurfaceView.kt  MmdNative.kt
mmd/src/main/java/com/kymjs/ai/mmd/: MmdGlSurfaceView.kt  MmdInspector.kt  MmdLibraryLoader.kt  MmdNative.kt
mnn/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
mnn/src/main/cpp/: mnnllmnative.cpp  mnnmodulennative.cpp  mnnnetnative.cpp
showerclient/: README.md  build.gradle.kts
showerclient/src/main/: AndroidManifest.xml
terminal/: README.md  build.gradle.kts
terminal/src/main/: AndroidManifest.xml
terminal/src/main/jni/: pty.c
terminal/src/main/res/values/: strings.xml
terminal/src/main/res/values-en/: strings.xml
tools/: execute_js.bat  execute_js.sh  kill_shower_server.bat  package_custard_pc_agent_asset.py  run_shower_server.bat
tools/custard-pc-agent/: README.md  custard_pc_agent.bat  custard_pc_agent_stop.bat  package.json
tools/custard-pc-agent/public/: index.html
tools/custard-pc-agent/public/scripts/i18n/: strings.js
tools/custard-pc-agent/scripts/: launch_agent.ps1  stop_agent.ps1
tools/custard-pc-agent/src/: server.js
tools/desktop/: settings.gradle.kts
tools/desktop/app/: build.gradle.kts
tools/desktop/app/src/main/: AndroidManifest.xml
tools/github/: commit_ai.py  import_anthropic_skills.py  issues_open.md  issues_open_ai.md  list_issues.py
tools/hotbuild/: apply_patch.py  build_patch.py  nightly_auto.py
tools/shell_identity_launcher/: CMakeLists.txt  build_android.bat  native-lib.cpp  push_android.bat
tools/shower/app/: build.gradle.kts  proguard-rules.pro
tools/string/: check_strings.py  count_ui_strings.py
(+1638 files in other folders)
